crates/axiom-typeck/tests/fixtures/errors/not_yet_supported.ax
fn main() { loop x in [1, 2, 3] { } }
